🐛 Fix security swagger
